# rules_rust_repro_2988

./: MODULE.bazel  README.md
go_program/: BUILD.bazel
rust_that_depends_on_go/: BUILD.bazel
rust_that_depends_on_go/src/: lib.rs
rust_that_depends_on_go/tests/: test.rs
